--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
+        <h1>Beast Mode</h1>
+        <p>Need to shit/shower? Enter your location.</p>
         Hello World
     </body>
 </html>
