--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
         <title>Document</title>
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+        <!-- javascript -->
+        <script src="app.js"></script>
+
+        <!-- google maps -->
+        <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB4-jmsiiXUWsxG7tEclGAM0YlF_ivmQ8&libraries=places&callback=initMap"
+            async
+            defer
+        ></script>
     </head>
     <body>
         Hello World
+
+        <div id="map" style="height: 400px; width: 100%"></div>
     </body>
 </html>
