the beast appears

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="style.css">
         <!-- javascript -->
         <script src="app.js"></script>
-
+        <!-- favicon-->
+        <!-- Favicon (multiple formats for cross-browser support) -->
+        <link rel="icon" href="data/rename" type="image/png">
         <!-- google maps -->
         <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB4-jmsiiXUWsxG7tEclGAM0YlF_ivmQ8&libraries=places&callback=initMap"
