beast mode going crazy with themes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Beast Mode</title>
+        <title>BEAST MODE </title>
+        <!-- Brutal Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Black+Ops+One&family=Audiowide&display=swap" rel="stylesheet">
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- CSS -->
@@ -11,7 +13,6 @@
         <!-- javascript -->
         <script src="app.js"></script>
         <!-- favicon-->
-        <!-- Favicon (multiple formats for cross-browser support) -->
         <link rel="icon" href="data/rename" type="image/png">
         <!-- google maps -->
         <script
@@ -30,9 +31,9 @@
                 <input type="checkbox" id="beastModeToggle">
                 <span class="beast-slider"></span>
             </label>
-            
+            <div id="status"></div>
             <div id="map"></div>
-            <div id="status">Beast Mode OFF</div>
+            <!-- <div id="status">Beast Mode: OFF</div> -->
             <div id="showerList"></div>
         </div>
     </body>
