Revert "beast mode going crazy with themes"
This reverts commit a09d078d5ae482424e226180e446bfc0e4914aa1.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>BEAST MODE </title>
-        <!-- Brutal Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Black+Ops+One&family=Audiowide&display=swap" rel="stylesheet">
+        <title>Beast Mode</title>
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- CSS -->
@@ -13,6 +11,7 @@
         <!-- javascript -->
         <script src="app.js"></script>
         <!-- favicon-->
+        <!-- Favicon (multiple formats for cross-browser support) -->
         <link rel="icon" href="data/rename" type="image/png">
         <!-- google maps -->
         <script
@@ -31,9 +30,9 @@
                 <input type="checkbox" id="beastModeToggle">
                 <span class="beast-slider"></span>
             </label>
-            <div id="status"></div>
+            
             <div id="map"></div>
-            <!-- <div id="status">Beast Mode: OFF</div> -->
+            <div id="status">Beast Mode OFF</div>
             <div id="showerList"></div>
         </div>
     </body>
