--- a/index.html
+++ b/index.html
@@ -91,5 +91,12 @@
                 </div>
             </section>
         </div>
-    </body>
+        
+<div class="messagepop pop">
+    <img src="https://media.tenor.com/K6ePAM7uA_0AAAAe/stinky-soap-emoticon-emoticon.png" alt="">
+   <button class="close">&times;</button>
+</div>
+
+<a href="/contact" id="contact">Contact Us</a>
+
 </html>
