--- a/index.html
+++ b/index.html
@@ -20,64 +20,19 @@
             defer
         ></script>
 
-        <script>
-            ((g) => {
-                var h,
-                    a,
-                    k,
-                    p = "The Google Maps JavaScript API",
-                    c = "google",
-                    l = "importLibrary",
-                    q = "__ib__",
-                    m = document,
-                    b = window;
-                b = b[c] || (b[c] = {});
-                var d = b.maps || (b.maps = {}),
-                    r = new Set(),
-                    e = new URLSearchParams(),
-                    u = () =>
-                        h ||
-                        (h = new Promise(async (f, n) => {
-                            await (a = m.createElement("script"));
-                            e.set("libraries", [...r] + "");
-                            for (k in g)
-                                e.set(
-                                    k.replace(
-                                        /[A-Z]/g,
-                                        (t) => "_" + t[0].toLowerCase(),
-                                    ),
-                                    g[k],
-                                );
-                            e.set("callback", c + ".maps." + q);
-                            a.src =
-                                `https://maps.${c}apis.com/maps/api/js?` + e;
-                            d[q] = f;
-                            a.onerror = () =>
-                                (h = n(Error(p + " could not load.")));
-                            a.nonce =
-                                m.querySelector("script[nonce]")?.nonce || "";
-                            m.head.append(a);
-                        }));
-                d[l]
-                    ? console.warn(p + " only loads once. Ignoring:", g)
-                    : (d[l] = (f, ...n) =>
-                          r.add(f) && u().then(() => d[l](f, ...n)));
-            })({
-                key: "AIzaSyAB4-jmsiiXUWsxG7tEclGAM0YlF_ivmQ8",
-                v: "weekly",
-                // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
-                // Add other bootstrap parameters as needed, using camel case.
-            });
-        </script>
+        <script scr="DO_NOT_OPEN.js"></script>
     </head>
     <body>
         <div class="container">
             <h1>BEAST MODE</h1>
-            <p class="tagline">Need to <span class="beast-mode-text">shower</span>? Activate Beast Mode to find the nearest shower on campus.</p>
-            
+            <p class="tagline">
+                Need to <span class="beast-mode-text">shower</span>? Activate
+                Beast Mode to find the nearest shower on campus.
+            </p>
+
             <!-- Beast Mode Toggle Switch -->
             <label class="beast-switch">
-                <input type="checkbox" id="beastModeToggle">
+                <input type="checkbox" id="beastModeToggle" />
                 <span class="beast-slider"></span>
             </label>
             <div id="status"></div>
