--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
             </section>
         </div>
 
-        <button data-modal-target="#modal">Open Modal</button>
+        <!-- <button data-modal-target="#modal">Open Modal</button> -->
         <div class="modal" id="modal">
           <div class="modal-header">
-            <div class="title">Example Modal</div>
+            <div class="title">PEE-EW, YOU STINK!</div>
             <button data-close-button class="close-button">&times;</button>
           </div>
           <div class="modal-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quod alias ut illo doloremque eum ipsum obcaecati distinctio debitis reiciendis quae quia soluta totam doloribus quos nesciunt necessitatibus, consectetur quisquam accusamus ex, dolorum, dicta vel? Nostrum voluptatem totam, molestiae rem at ad autem dolor ex aperiam. Amet assumenda eos architecto, dolor placeat deserunt voluptatibus tenetur sint officiis perferendis atque! Voluptatem maxime eius eum dolorem dolor exercitationem quis iusto totam! Repudiandae nobis nesciunt sequi iure! Eligendi, eius libero. Ex, repellat sapiente!
+            <img src="/data/stinky.png" alt="yellow emoji dude holding his nose and giving you a bar of soap" id="modal-photo">
+            You stink! You need to shower. Try reactivating Beast Mode to find a shower!
           </div>
         </div>
         <div id="overlay"></div>
