--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="modal-body">
                 <img
-                    src="/data/stinky.png"
+                    src="data/stinky.png"
                     alt="yellow emoji dude holding his nose and giving you a bar of soap"
                     id="modal-photo"
                 />
